# rust-pcs

./: .gitmodules  Cargo.toml  README.md  x.py
.github/workflows/: test.yml
dump-mir-optimised/: Cargo.toml
dump-mir-optimised/src/: main.rs
lsp-epcs-hover/: Cargo.toml
lsp-epcs-hover/src/: compiler_hook.rs  main.rs
rust-epcs/: Cargo.toml
rust-epcs-cli/: Cargo.toml  mir_emit
rust-epcs-cli/snippets/: borrow.rs  check_moves.rs  consume_call.rs  krust1.rs  krust2.rs  loops.rs  main.rs  nested.rs  nested_cond.rs  oxide.rs  prefix.rs  reborrow_deref.rs  scope_partial_borrow.rs  scopes.rs  shared_lifetime.rs  simplest_loop.rs  slices.rs  split_reborrow.rs  subplaces.rs  why_old_outer.rs
rust-epcs-cli/src/: compiler_hook.rs  main.rs
rust-epcs/src/: lib.rs
rust-epcs/src/analyses/: common.rs  epcs.rs  epcs_builder.rs  fra_builder.rs  mod.rs  pack_unpack.rs  pretty_printer.rs
rust-epcs/tests/: integration_tests.rs
rust-epcs/tests/resources/: append.rs  arg_struct.rs  enum_split_borrows.rs  expire_borrows_liveness.rs  expire_mutable.rs  expire_mutable_with_mutable.rs  expire_shared_with_mutable.rs  fra_struct_from_args.rs  function_annotation1.rs  function_annotation2.rs  function_annotation3.rs  pack.rs  permissions.rs  reborrow.rs  shared_args.rs  simple_if.rs  simplest_loop.rs  stay_in_refs_form.rs  struct_borrows.rs  struct_move_out.rs  two_phase_borrow.rs
vscode-epcs-hover/: README.md  package.json
vscode-epcs-hover/client/src/: extension.ts
