[package]
name = "lsp-epcs-hover"
version = "0.1.0"
authors = ["William Seddon <wseddon@student.ethz.ch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-epcs = { path = "../rust-epcs" }
log = "0.4.8"
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
lsp-server = "0.3.4"
lsp-types = "0.79.0"
flexi_logger = "0.14.0"

